# inrof2025_ros

./: .gitignore  CMakeLists.txt  README.md  frames_2025-02-16_05.10.29.gv  frames_2025-02-16_05.12.04.gv  package.xml
config/: default.rviz  diff.yaml  jtc.yaml  ldlidar_settings.yaml  main_bt.xml  manager.yaml  slam_settings.yaml
examples/: diff_drive.cpp
include/: action_node.hpp  ros_node.hpp
launch/: field.launch.py  mapping.launch.py  raspi.launch.py  raspi.py  rviz.launch.py  simulation.launch.py
map/: ..yaml  map.pgm  map.yaml
meshes/: alm_1_v2_1.stl  alm_1_v2_2.stl  alm_1_v3_1.stl  alm_1_v3_2.stl  barrel_v1_11.stl  barrel_v1_2.stl  barrel_v1_25.stl  barrel_v1_27.stl  barrel_v1_29.stl  barrel_v1_4.stl  barrel_v1_5.stl  barrel_v1_6.stl  barrel_v1_9.stl  barrel_v2_1.stl  barrel_v2_10.stl  barrel_v2_14.stl  barrel_v2_15.stl  barrel_v2_19.stl  barrel_v2_21.stl  barrel_v2_24.stl  barrel_v2_3.stl  barrel_v2_30.stl  barrel_v2_7.stl  barrel_v2_8.stl  barrel_v3_1.stl  barrel_v3_10.stl  barrel_v3_12.stl  barrel_v3_13.stl  barrel_v3_16.stl  barrel_v3_17.stl  barrel_v3_18.stl  barrel_v3_2.stl  barrel_v3_20.stl  barrel_v3_22.stl  barrel_v3_23.stl  barrel_v3_26.stl  barrel_v3_28.stl  barrel_v3_3.stl  barrel_v3_4.stl  barrel_v3_5.stl  (+98 more)
models/field/: model.config  model.sdf
src/: bt_node.cpp  diff_drive.cpp  dummy_vacume_uart.cpp  example_omuni_drive_node.cpp  follow_node.cpp  gen_path.cpp  joy2vel.cpp  mcl_node.cpp  omuni_drive_node.cpp  omuni_odometry.cpp  rotate_node.cpp  uart_sample.cpp  vacume_uart.cpp  vel_feedback_node.cpp  vel_feedback_uart.cpp
urdf/: diff.xacro.urdf  materials.xacro  robot.trans  robot.xacro  robot_for_gazebo.trans  robot_for_gazebo.xacro  trolley.urdf  trolley.xacro.urdf
utils/: create_map.py
worlds/: field.world
